--- a/binke-newdo.html
+++ b/binke-newdo.html
@@ -75,7 +75,7 @@
       <div id="u8" class="ax_default label">
         <div id="u8_div" class=""></div>
         <div id="u8_text" class="text ">
-          <p><span>旅客信息密级</span></p>
+          <p><span>优惠人信息密级</span></p>
         </div>
       </div>
 
@@ -135,43 +135,73 @@
               <img id="u18_img" class="img " src="images/binke-newdo/regen/u18.png"/>
             </div>
 
-            <!-- Unnamed (椭圆形) -->
-            <div id="u19" class="ax_default ellipse">
-              <img id="u19_img" class="img " src="images/binke-newdo/regen/u19.png"/>
+            <!-- Unnamed (组合) -->
+            <div id="u19" class="ax_default" data-left="124" data-top="215" data-width="57" data-height="18">
+
+              <!-- Unnamed (椭圆形) -->
+              <div id="u20" class="ax_default ellipse">
+                <img id="u20_img" class="img " src="images/binke-newdo/regen/u20.png"/>
+              </div>
+
+              <!-- Unnamed (矩形) -->
+              <div id="u21" class="ax_default label">
+                <div id="u21_div" class=""></div>
+                <div id="u21_text" class="text ">
+                  <p><span>普通</span></p>
+                </div>
+              </div>
             </div>
 
-            <!-- Unnamed (矩形) -->
-            <div id="u20" class="ax_default label">
-              <div id="u20_div" class=""></div>
-              <div id="u20_text" class="text ">
-                <p><span>普通</span></p>
+            <!-- Unnamed (组合) -->
+            <div id="u22" class="ax_default" data-left="124" data-top="249" data-width="57" data-height="18">
+
+              <!-- Unnamed (椭圆形) -->
+              <div id="u23" class="ax_default ellipse">
+                <img id="u23_img" class="img " src="images/binke-newdo/regen/u20.png"/>
+              </div>
+
+              <!-- Unnamed (矩形) -->
+              <div id="u24" class="ax_default label">
+                <div id="u24_div" class=""></div>
+                <div id="u24_text" class="text ">
+                  <p><span>保密</span></p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Unnamed (组合) -->
+            <div id="u25" class="ax_default" data-left="124" data-top="284" data-width="57" data-height="18">
+
+              <!-- Unnamed (椭圆形) -->
+              <div id="u26" class="ax_default ellipse">
+                <img id="u26_img" class="img " src="images/binke-newdo/regen/u20.png"/>
+              </div>
+
+              <!-- Unnamed (矩形) -->
+              <div id="u27" class="ax_default label">
+                <div id="u27_div" class=""></div>
+                <div id="u27_text" class="text ">
+                  <p><span>机密</span></p>
+                </div>
               </div>
             </div>
 
             <!-- Unnamed (椭圆形) -->
-            <div id="u21" class="ax_default ellipse">
-              <img id="u21_img" class="img " src="images/binke-newdo/regen/u19.png"/>
+            <div id="u28" class="ax_default ellipse">
+              <img id="u28_img" class="img " src="images/binke-newdo/regen/u28.png"/>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u22" class="ax_default label">
-              <div id="u22_div" class=""></div>
-              <div id="u22_text" class="text ">
-                <p><span>保密</span></p>
+            <div id="u29" class="ax_default label">
+              <div id="u29_div" class=""></div>
+              <div id="u29_text" class="text ">
+                <p><span>请选择</span></p>
               </div>
             </div>
 
             <!-- Unnamed (椭圆形) -->
-            <div id="u23" class="ax_default ellipse">
-              <img id="u23_img" class="img " src="images/binke-newdo/regen/u19.png"/>
-            </div>
-
-            <!-- Unnamed (矩形) -->
-            <div id="u24" class="ax_default label">
-              <div id="u24_div" class=""></div>
-              <div id="u24_text" class="text ">
-                <p><span>机密</span></p>
-              </div>
+            <div id="u30" class="ax_default ellipse">
+              <img id="u30_img" class="img " src="images/binke-newdo/regen/u30.png"/>
             </div>
           </div>
         </div>
