--- a/binke-pc.html
+++ b/binke-pc.html
@@ -27,7 +27,7 @@
 
       <!-- Unnamed (图片) -->
       <div id="u0" class="ax_default _图片">
-        <img id="u0_img" class="img " src="images/binke-pc/regen/u0.png"/>
+        <img id="u0_img" class="img " src="images/binke-pc/regen/u0.jpg"/>
       </div>
 
       <!-- Unnamed (矩形) -->
@@ -39,7 +39,7 @@
       <div id="u2" class="ax_default label">
         <div id="u2_div" class=""></div>
         <div id="u2_text" class="text ">
-          <p><span>旅客信息密级</span></p>
+          <p><span>优惠人信息密级：</span></p>
         </div>
       </div>
 
@@ -61,9 +61,9 @@
               <img id="u5_img" class="img " src="images/binke-pc/regen/三角_u5.png"/>
             </div>
 
-            <!-- Unnamed (文本框) -->
-            <div id="u6" class="ax_default text_field">
-              <input id="u6_input" type="text" value=""/>
+            <!-- 密级选择 (文本框) -->
+            <div id="u6" class="ax_default text_field" data-label="密级选择">
+              <input id="u6_input" type="text" value="请选择"/>
             </div>
           </div>
         </div>
@@ -151,134 +151,138 @@
         </div>
       </div>
 
-      <!-- Unnamed (动态面板) -->
+      <!-- Unnamed (热区) -->
       <div id="u14" class="ax_default">
-        <div id="u14_state0" class="panel_state" data-label="折叠" style="">
-          <div id="u14_state0_content" class="panel_state_content">
+      </div>
+
+      <!-- Unnamed (动态面板) -->
+      <div id="u15" class="ax_default">
+        <div id="u15_state0" class="panel_state" data-label="折叠" style="">
+          <div id="u15_state0_content" class="panel_state_content">
 
             <!-- Unnamed (矩形) -->
-            <div id="u15" class="ax_default box_1">
-              <div id="u15_div" class=""></div>
-              <div id="u15_text" class="text ">
+            <div id="u16" class="ax_default box_1">
+              <div id="u16_div" class=""></div>
+              <div id="u16_text" class="text ">
                 <p><span>&nbsp; </span></p>
               </div>
             </div>
 
             <!-- 三角 (图片) -->
-            <div id="u16" class="ax_default _图片" data-label="三角">
-              <img id="u16_img" class="img " src="images/binke-pc/regen/三角_u5.png"/>
+            <div id="u17" class="ax_default _图片" data-label="三角">
+              <img id="u17_img" class="img " src="images/binke-pc/regen/三角_u5.png"/>
             </div>
 
             <!-- Unnamed (文本框) -->
-            <div id="u17" class="ax_default text_field">
-              <input id="u17_input" type="text" value=""/>
+            <div id="u18" class="ax_default text_field">
+              <input id="u18_input" type="text" value=""/>
             </div>
           </div>
         </div>
-        <div id="u14_state1" class="panel_state" data-label="展开" style="visibility: hidden;">
-          <div id="u14_state1_content" class="panel_state_content">
+        <div id="u15_state1" class="panel_state" data-label="展开" style="visibility: hidden;">
+          <div id="u15_state1_content" class="panel_state_content">
 
             <!-- Unnamed (矩形) -->
-            <div id="u18" class="ax_default box_1">
-              <div id="u18_div" class=""></div>
-              <div id="u18_text" class="text ">
+            <div id="u19" class="ax_default box_1">
+              <div id="u19_div" class=""></div>
+              <div id="u19_text" class="text ">
                 <p><span>&nbsp; </span></p>
               </div>
             </div>
 
             <!-- 三角 (图片) -->
-            <div id="u19" class="ax_default _图片" data-label="三角">
-              <img id="u19_img" class="img " src="images/binke-pc/regen/三角_u5.png"/>
+            <div id="u20" class="ax_default _图片" data-label="三角">
+              <img id="u20_img" class="img " src="images/binke-pc/regen/三角_u5.png"/>
             </div>
 
             <!-- Unnamed (中继器) -->
-            <div id="u20" class="ax_default">
-              <script id="u20_script" type="axure-repeater-template">
+            <div id="u21" class="ax_default">
+              <script id="u21_script" type="axure-repeater-template">
 
                 <!-- Unnamed (矩形) -->
-                <div id="u21" class="ax_default box_1 u21">
-                  <div id="u21_div" class="u21_div"></div>
-                  <div id="u21_text" class="text u21_text">
+                <div id="u22" class="ax_default box_1 u22">
+                  <div id="u22_div" class="u22_div"></div>
+                  <div id="u22_text" class="text u22_text">
                     <p><span>选择</span></p>
                   </div>
                 </div>
               </script>
-              <div id="u20-1" class="preeval" style="width: 70px; height: 32px;">
+              <div id="u21-1" class="preeval" style="width: 70px; height: 32px;">
 
                 <!-- Unnamed (矩形) -->
-                <div id="u21-1" class="ax_default box_1 u21" style="width: 70px; height: 32px; left: 0px; top: 0px;visibility: inherit">
-                  <div id="u21-1_div" class="u21_div" style="width: 70px; height: 32px;visibility: inherit"></div>
-                  <div id="u21-1_text" class="text u21_text" style="position: absolute;left: 2px;top: 8px;width: 68px;visibility: inherit">
+                <div id="u22-1" class="ax_default box_1 u22" style="width: 70px; height: 32px; left: 0px; top: 0px;visibility: inherit">
+                  <div id="u22-1_div" class="u22_div" style="width: 70px; height: 32px;visibility: inherit"></div>
+                  <div id="u22-1_text" class="text u22_text" style="position: absolute;left: 2px;top: 8px;width: 68px;visibility: inherit">
                     <p><span>&nbsp;&nbsp; M2</span></p>
                   </div>
                 </div>
               </div>
-              <div id="u20-2" class="preeval" style="width: 70px; height: 32px;">
+              <div id="u21-2" class="preeval" style="width: 70px; height: 32px;">
 
                 <!-- Unnamed (矩形) -->
-                <div id="u21-2" class="ax_default box_1 u21" style="width: 70px; height: 32px; left: 0px; top: 0px;visibility: inherit">
-                  <div id="u21-2_div" class="u21_div" style="width: 70px; height: 32px;visibility: inherit"></div>
-                  <div id="u21-2_text" class="text u21_text" style="position: absolute;left: 2px;top: 8px;width: 68px;visibility: inherit">
+                <div id="u22-2" class="ax_default box_1 u22" style="width: 70px; height: 32px; left: 0px; top: 0px;visibility: inherit">
+                  <div id="u22-2_div" class="u22_div" style="width: 70px; height: 32px;visibility: inherit"></div>
+                  <div id="u22-2_text" class="text u22_text" style="position: absolute;left: 2px;top: 8px;width: 68px;visibility: inherit">
                     <p><span>&nbsp;&nbsp; M3</span></p>
                   </div>
                 </div>
               </div>
-              <div id="u20-3" class="preeval" style="width: 70px; height: 32px;">
+              <div id="u21-3" class="preeval" style="width: 70px; height: 32px;">
 
                 <!-- Unnamed (矩形) -->
-                <div id="u21-3" class="ax_default box_1 u21" style="width: 70px; height: 32px; left: 0px; top: 0px;visibility: inherit">
-                  <div id="u21-3_div" class="u21_div" style="width: 70px; height: 32px;visibility: inherit"></div>
-                  <div id="u21-3_text" class="text u21_text" style="position: absolute;left: 2px;top: 8px;width: 68px;visibility: inherit">
+                <div id="u22-3" class="ax_default box_1 u22" style="width: 70px; height: 32px; left: 0px; top: 0px;visibility: inherit">
+                  <div id="u22-3_div" class="u22_div" style="width: 70px; height: 32px;visibility: inherit"></div>
+                  <div id="u22-3_text" class="text u22_text" style="position: absolute;left: 2px;top: 8px;width: 68px;visibility: inherit">
                     <p><span>&nbsp;&nbsp; M4</span></p>
                   </div>
                 </div>
               </div>
-              <div id="u20-4" class="preeval" style="width: 70px; height: 32px;">
+              <div id="u21-4" class="preeval" style="width: 70px; height: 32px;">
 
                 <!-- Unnamed (矩形) -->
-                <div id="u21-4" class="ax_default box_1 u21" style="width: 70px; height: 32px; left: 0px; top: 0px;visibility: inherit">
-                  <div id="u21-4_div" class="u21_div" style="width: 70px; height: 32px;visibility: inherit"></div>
-                  <div id="u21-4_text" class="text u21_text" style="position: absolute;left: 2px;top: 8px;width: 68px;visibility: inherit">
+                <div id="u22-4" class="ax_default box_1 u22" style="width: 70px; height: 32px; left: 0px; top: 0px;visibility: inherit">
+                  <div id="u22-4_div" class="u22_div" style="width: 70px; height: 32px;visibility: inherit"></div>
+                  <div id="u22-4_text" class="text u22_text" style="position: absolute;left: 2px;top: 8px;width: 68px;visibility: inherit">
                     <p><span>&nbsp;&nbsp; M5</span></p>
                   </div>
                 </div>
               </div>
-              <div id="u20-5" class="preeval" style="width: 70px; height: 32px;">
+              <div id="u21-5" class="preeval" style="width: 70px; height: 32px;">
 
                 <!-- Unnamed (矩形) -->
-                <div id="u21-5" class="ax_default box_1 u21" style="width: 70px; height: 32px; left: 0px; top: 0px;visibility: inherit">
-                  <div id="u21-5_div" class="u21_div" style="width: 70px; height: 32px;visibility: inherit"></div>
-                  <div id="u21-5_text" class="text u21_text" style="position: absolute;left: 2px;top: 8px;width: 68px;visibility: inherit">
+                <div id="u22-5" class="ax_default box_1 u22" style="width: 70px; height: 32px; left: 0px; top: 0px;visibility: inherit">
+                  <div id="u22-5_div" class="u22_div" style="width: 70px; height: 32px;visibility: inherit"></div>
+                  <div id="u22-5_text" class="text u22_text" style="position: absolute;left: 2px;top: 8px;width: 68px;visibility: inherit">
                     <p><span>&nbsp;&nbsp; M6</span></p>
                   </div>
                 </div>
               </div>
-              <div id="u20-6" class="preeval" style="width: 70px; height: 32px;">
+              <div id="u21-6" class="preeval" style="width: 70px; height: 32px;">
 
                 <!-- Unnamed (矩形) -->
-                <div id="u21-6" class="ax_default box_1 u21" style="width: 70px; height: 32px; left: 0px; top: 0px;visibility: inherit">
-                  <div id="u21-6_div" class="u21_div" style="width: 70px; height: 32px;visibility: inherit"></div>
-                  <div id="u21-6_text" class="text u21_text" style="position: absolute;left: 2px;top: 8px;width: 68px;visibility: inherit">
+                <div id="u22-6" class="ax_default box_1 u22" style="width: 70px; height: 32px; left: 0px; top: 0px;visibility: inherit">
+                  <div id="u22-6_div" class="u22_div" style="width: 70px; height: 32px;visibility: inherit"></div>
+                  <div id="u22-6_text" class="text u22_text" style="position: absolute;left: 2px;top: 8px;width: 68px;visibility: inherit">
                     <p><span>&nbsp;&nbsp; M7</span></p>
                   </div>
                 </div>
               </div>
-              <div id="u20-7" class="preeval" style="width: 70px; height: 32px;">
+              <div id="u21-7" class="preeval" style="width: 70px; height: 32px;">
 
                 <!-- Unnamed (矩形) -->
-                <div id="u21-7" class="ax_default box_1 u21" style="width: 70px; height: 32px; left: 0px; top: 0px;visibility: inherit">
-                  <div id="u21-7_div" class="u21_div" style="width: 70px; height: 32px;visibility: inherit"></div>
-                  <div id="u21-7_text" class="text u21_text" style="position: absolute;left: 2px;top: 8px;width: 68px;visibility: inherit">
+                <div id="u22-7" class="ax_default box_1 u22" style="width: 70px; height: 32px; left: 0px; top: 0px;visibility: inherit">
+                  <div id="u22-7_div" class="u22_div" style="width: 70px; height: 32px;visibility: inherit"></div>
+                  <div id="u22-7_text" class="text u22_text" style="position: absolute;left: 2px;top: 8px;width: 68px;visibility: inherit">
                     <p><span>&nbsp;&nbsp; M8</span></p>
                   </div>
                 </div>
               </div>
-              <div id="u20-8" class="preeval" style="width: 70px; height: 32px;">
+              <div id="u21-8" class="preeval" style="width: 70px; height: 32px;">
 
                 <!-- Unnamed (矩形) -->
-                <div id="u21-8" class="ax_default box_1 u21" style="width: 70px; height: 32px; left: 0px; top: 0px;visibility: inherit">
-                  <div id="u21-8_div" class="u21_div" style="width: 70px; height: 32px;visibility: inherit"></div>
-                  <div id="u21-8_text" class="text u21_text" style="position: absolute;left: 2px;top: 8px;width: 68px;visibility: inherit">
+                <div id="u22-8" class="ax_default box_1 u22" style="width: 70px; height: 32px; left: 0px; top: 0px;visibility: inherit">
+                  <div id="u22-8_div" class="u22_div" style="width: 70px; height: 32px;visibility: inherit"></div>
+                  <div id="u22-8_text" class="text u22_text" style="position: absolute;left: 2px;top: 8px;width: 68px;visibility: inherit">
                     <p><span>&nbsp;&nbsp; M9</span></p>
                   </div>
                 </div>
@@ -286,16 +290,36 @@
             </div>
 
             <!-- Unnamed (文本框) -->
-            <div id="u22" class="ax_default text_field">
-              <input id="u22_input" type="text" value=""/>
+            <div id="u23" class="ax_default text_field">
+              <input id="u23_input" type="text" value=""/>
             </div>
           </div>
         </div>
       </div>
 
-      <!-- Unnamed (图片) -->
-      <div id="u23" class="ax_default _图片">
-        <img id="u23_img" class="img " src="images/binke-pc/regen/u23.png"/>
+      <!-- 弹窗警告 (动态面板) -->
+      <div id="u24" class="ax_default ax_default_hidden" data-label="弹窗警告" style="display:none; visibility: hidden">
+        <div id="u24_state0" class="panel_state" data-label="State1" style="">
+          <div id="u24_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (图片) -->
+            <div id="u25" class="ax_default _图片">
+              <img id="u25_img" class="img " src="images/binke-pc/regen/u25.png"/>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u26" class="ax_default box_1">
+              <img id="u26_img" class="img " src="images/binke-pc/regen/u26.png"/>
+              <div id="u26_text" class="text ">
+                <p><span>请选择优惠人信息密级！</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (热区) -->
+            <div id="u27" class="ax_default">
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
